implementation: added the logic behind the login/register forms

--- a/stock-market-simulator-ui/src/sign-in/index.html
+++ b/stock-market-simulator-ui/src/sign-in/index.html
@@ -50,12 +50,14 @@
               class="font-bold text-white text-left w-full block">
               Email Address
             </label>
+
             <input
               id="email"
               class="p-4 rounded-xl bg-white w-full h-12"
               placeholder="Email"
               type="email"
               required />
+            <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
           <div class="space-y-2 relative flex flex-col">
@@ -71,12 +73,13 @@
               type="password"
               minlength="6"
               required />
+            <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
           <div class="text-right my-4">
-            <a href="#">
+            <a href="/sign-up/index.html">
               <p class="text-blue-400 hover:text-blue-500 transition">
-                Forgot Password?
+                Don&apos;t have an account?
               </p>
             </a>
           </div>
