--- a/stock-market-simulator-ui/src/sign-in/index.html
+++ b/stock-market-simulator-ui/src/sign-in/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <title>Sign In</title>
     <script>
       tailwind.config = {
@@ -13,7 +14,8 @@
   </head>
   <body>
     <div
-      class="size-full flex items-center justify-center h-screen bg-[#1a1b23]">
+      class="size-full flex items-center justify-center h-screen bg-[#1a1b23]"
+    >
       <div class="text-center w-full max-w-screen-sm mx-auto">
         <!-- Flex container to align h1 and dark mode button -->
         <div class="flex items-center justify-between mb-4">
@@ -24,30 +26,35 @@
           <!-- Dark mode toggle button on the right -->
           <button
             id="dark-mode-toggle"
-            class="p-2 rounded-full bg-gray-200 dark:bg-gray-700">
+            class="p-2 rounded-full bg-gray-200 dark:bg-gray-700"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6 text-gray-800 dark:text-yellow-300"
               fill="none"
               viewBox="0 0 24 24"
-              stroke="currentColor">
+              stroke="currentColor"
+            >
               <path
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+              />
             </svg>
           </button>
         </div>
 
         <hr
-          class="text-center bg-white h-1 rounded-full my-4 w-[150px] mx-auto" />
+          class="text-center bg-white h-1 rounded-full my-4 w-[150px] mx-auto"
+        />
 
         <form class="space-y-4">
           <div class="space-y-2 relative flex flex-col">
             <label
               for="email"
-              class="font-bold text-white text-left w-full block">
+              class="font-bold text-white text-left w-full block"
+            >
               Email Address
             </label>
 
@@ -56,14 +63,16 @@
               class="p-4 rounded-xl bg-white w-full h-12"
               placeholder="Email"
               type="email"
-              required />
+              required
+            />
             <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
           <div class="space-y-2 relative flex flex-col">
             <label
               for="password"
-              class="font-bold text-white text-left w-full block">
+              class="font-bold text-white text-left w-full block"
+            >
               Password
             </label>
             <input
@@ -72,7 +81,8 @@
               placeholder="Password"
               type="password"
               minlength="6"
-              required />
+              required
+            />
             <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
@@ -87,7 +97,8 @@
           <button
             id="submit"
             type="submit"
-            class="p-3 bg-blue-500 hover:bg-blue-600 transition text-white rounded-full w-full h-12">
+            class="p-3 bg-blue-500 hover:bg-blue-600 transition text-white rounded-full w-full h-12"
+          >
             Login
           </button>
         </form>
