--- a/stock-market-simulator-ui/src/index.html
+++ b/stock-market-simulator-ui/src/index.html
@@ -16,71 +16,111 @@
     </script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
   </head>
   <body class="bg-[#1a1b23] text-white min-h-screen overflow-y-auto">
     <div class="bg-[#343a40] w-full h-20 flex items-center justify-center">
       <!-- HTML -->
       <div class="search-container relative">
         <div
-          class="rounded-md w-[400px] bg-[#101114] flex items-center px-4 py-2">
+          class="rounded-md w-[400px] bg-[#101114] flex items-center px-4 py-2"
+        >
           <svg
             width="24px"
             height="24px"
             viewBox="0 0 24 24"
             fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
               d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
               stroke="#9CA3AF"
               stroke-width="2"
               stroke-linecap="round"
-              stroke-linejoin="round" />
+              stroke-linejoin="round"
+            />
           </svg>
 
           <input
             id="search-input"
             placeholder="Search"
-            class="bg-transparent text-gray-300 placeholder-gray-500 focus:outline-none w-full ml-2" />
+            class="bg-transparent text-gray-300 placeholder-gray-500 focus:outline-none w-full ml-2"
+          />
         </div>
         <!-- Results dropdown -->
         <div
           id="search-results"
           class="absolute bg-[#1a1b1f] mt-2 rounded-md shadow-lg hidden"
-          style="width: 400px"></div>
+          style="width: 400px"
+        ></div>
+      </div>
+
+      <div class="absolute right-4">
+        <button
+          id="logout-button"
+          class="flex items-center justify-center group"
+        >
+          <span
+            class="mr-2 font-semibold text-white group-hover:text-neutral-200 transition"
+            >Logout</span
+          >
+          <svg
+            class="size-6 text-white group-hover:text-neutral-200 transition"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path d="M14 19V5h4a1 1 0 0 1 1 1v11h1a1 1 0 0 1 0 2h-6Z" />
+            <path
+              fill-rule="evenodd"
+              d="M12 4.571a1 1 0 0 0-1.275-.961l-5 1.428A1 1 0 0 0 5 6v11H4a1 1 0 0 0 0 2h1.86l4.865 1.39A1 1 0 0 0 12 19.43V4.57ZM10 11a1 1 0 0 1 1 1v.5a1 1 0 0 1-2 0V12a1 1 0 0 1 1-1Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </button>
       </div>
 
       <!-- Modal -->
       <div
         id="modal"
-        class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center w-full">
+        class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center w-full"
+      >
         <form
           class="p-6 rounded-xl shadow-lg w-[450px] bg-[#23242f] text-white"
-          id="transaction-form">
+          id="transaction-form"
+        >
           <!-- Header -->
           <div class="flex items-center justify-between mb-4">
             <h2 id="modal-title" class="text-lg font-bold">Place Order</h2>
             <button
               type="button"
               id="close-modal"
-              class="bg-[#2c2d39] hover:bg-[#1a1b26] opacity-75 transition text-white px-4 py-2 rounded-xl">
+              class="bg-[#2c2d39] hover:bg-[#1a1b26] opacity-75 transition text-white px-4 py-2 rounded-xl"
+            >
               X
             </button>
           </div>
 
           <!-- Buy/Sell Toggle -->
           <div
-            class="flex items-center justify-center mb-6 space-x-1 p-1.5 rounded-xl bg-[#2c2d39]">
+            class="flex items-center justify-center mb-6 space-x-1 p-1.5 rounded-xl bg-[#2c2d39]"
+          >
             <button
               type="button"
               id="buy-button"
-              class="rounded-xl bg-emerald-500 hover:bg-emerald-500 w-full py-2 font-bold transition">
+              class="rounded-xl bg-emerald-500 hover:bg-emerald-500 w-full py-2 font-bold transition"
+            >
               Buy
             </button>
             <button
               type="button"
               id="sell-button"
-              class="rounded-xl bg-[#2c2d39] hover:bg-rose-500 w-full py-2 font-bold transition">
+              class="rounded-xl bg-[#2c2d39] hover:bg-rose-500 w-full py-2 font-bold transition"
+            >
               Sell
             </button>
           </div>
@@ -97,7 +137,8 @@
               type="number"
               value=""
               readonly
-              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full" />
+              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full"
+            />
           </div>
 
           <!-- Quantity -->
@@ -107,7 +148,8 @@
               required
               type="number"
               placeholder="Enter quantity"
-              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full" />
+              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full"
+            />
           </div>
 
           <!-- Buying Power and MAX Button -->
@@ -118,7 +160,8 @@
             <button
               type="button"
               class="bg-[#3b3c4e] hover:bg-[#4a4b5e] text-white px-4 py-2 rounded-xl font-bold text-xs"
-              id="max-button">
+              id="max-button"
+            >
               MAX
             </button>
           </div>
@@ -126,7 +169,8 @@
           <!-- Submit Button -->
           <button
             type="submit"
-            class="bg-emerald-500 hover:bg-emerald-600 transition rounded-2xl w-full py-4 font-bold text-lg">
+            class="bg-emerald-500 hover:bg-emerald-600 transition rounded-2xl w-full py-4 font-bold text-lg"
+          >
             Buy
           </button>
         </form>
@@ -171,18 +215,21 @@
           <!-- Date Picker 1 -->
           <button
             id="datePicker1"
-            class="flex items-center space-x-2 bg-[#292B36] px-4 py-2 rounded-md text-gray-300 hover:bg-[#2C2E39] transition">
+            class="flex items-center space-x-2 bg-[#292B36] px-4 py-2 rounded-md text-gray-300 hover:bg-[#2C2E39] transition"
+          >
             <svg
               width="24px"
               height="24px"
               viewBox="0 0 24 24"
               fill="none"
-              xmlns="http://www.w3.org/2000/svg">
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
                 d="M3 9H21M7 3V5M17 3V5M6 12H8M11 12H13M16 12H18M6 15H8M11 15H13M16 15H18M6 18H8M11 18H13M16 18H18M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903 20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799 19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z"
                 stroke="#9CA3AF"
                 stroke-width="2"
-                stroke-linecap="round" />
+                stroke-linecap="round"
+              />
             </svg>
             <span id="selectedDate1">Dec 22, 2024</span>
           </button>
@@ -191,18 +238,21 @@
           <!-- Date Picker 2 -->
           <button
             id="datePicker2"
-            class="flex items-center space-x-2 bg-[#292B36] px-4 py-2 rounded-md text-gray-300 hover:bg-[#2C2E39] transition">
+            class="flex items-center space-x-2 bg-[#292B36] px-4 py-2 rounded-md text-gray-300 hover:bg-[#2C2E39] transition"
+          >
             <svg
               width="24px"
               height="24px"
               viewBox="0 0 24 24"
               fill="none"
-              xmlns="http://www.w3.org/2000/svg">
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
                 d="M3 9H21M7 3V5M17 3V5M6 12H8M11 12H13M16 12H18M6 15H8M11 15H13M16 15H18M6 18H8M11 18H13M16 18H18M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903 20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799 19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z"
                 stroke="#9CA3AF"
                 stroke-width="2"
-                stroke-linecap="round" />
+                stroke-linecap="round"
+              />
             </svg>
             <span id="selectedDate2">Jan 22, 2025</span>
           </button>
