feat: added realtime update for transaction

--- a/stock-market-simulator-ui/src/index.html
+++ b/stock-market-simulator-ui/src/index.html
@@ -269,7 +269,8 @@
                 <th class="py-3 px-4">Type</th>
                 <th class="py-3 px-4">Price</th>
                 <th class="py-3 px-4">Amount</th>
-                <th class="py-3 px-4">Total</th>
+                <th class="py-3 px-4">Bought Price</th>
+                <th class="py-3 px-4">New Price</th>
               </tr>
             </thead>
             <tbody id="trading-history-body"></tbody>
