feat: added ability to change graphs and fixed buy/sell modal to display the correct price.

--- a/stock-market-simulator-ui/src/index.html
+++ b/stock-market-simulator-ui/src/index.html
@@ -196,6 +196,11 @@
         <p class="text-emerald-500" id="balance-change">+$645.78 (6.46%)</p>
       </div>
 
+      <div
+        id="ticker-buttons"
+        class="flex gap-2 mb-4 items-center justify-start my-4 overflow-x-auto whitespace-nowrap p-2 scrollbar-hide"
+      ></div>
+
       <div class="w-full h-96">
         <canvas class="chart"></canvas>
       </div>
