--- a/stock-market-simulator-ui/src/index.html
+++ b/stock-market-simulator-ui/src/index.html
@@ -183,7 +183,29 @@
       </div>
     </div>
     <div class="py-8 max-w-screen-xl mx-auto">
-      <h1 class="text-3xl font-bold">Stock Market Simulator</h1>
+      <div class="flex items-center justify-between">
+        <h1 class="text-3xl font-bold">Stock Market Simulator</h1>
+
+        <button
+          id="dark-mode-toggle"
+          class="p-2 rounded-full bg-gray-200 dark:bg-gray-700"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 text-gray-800 dark:text-yellow-300"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+            />
+          </svg>
+        </button>
+      </div>
 
       <div class="block mt-4 mb-2">
         <p class="text-gray-400 font-semibold text-sm">Current Balance</p>
