--- a/stock-market-simulator-ui/src/sign-up/index.html
+++ b/stock-market-simulator-ui/src/sign-up/index.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div
-      class="size-full flex items-center justify-center h-screen bg-[#1a1b23]"
+      class="size-full flex items-center justify-center h-screen dark:bg-[#1a1b23] bg-neutral-100"
     >
       <div class="text-center w-full max-w-screen-sm mx-auto">
         <!-- Flex container to align h1 and dark mode button -->
         <div class="flex items-center justify-between mb-4">
-          <h1 class="font-bold text-2xl uppercase text-center text-white">
+          <h1 class="font-bold text-2xl uppercase text-center dark:text-white">
             Sign Up
           </h1>
 
@@ -46,14 +46,14 @@
         </div>
 
         <hr
-          class="text-center bg-white h-1 rounded-full my-4 w-[150px] mx-auto"
+          class="text-center dark:bg-white bg-neutral-500 h-1 rounded-full my-4 w-[150px] mx-auto"
         />
 
         <form class="space-y-4">
           <div class="space-y-2 relative flex flex-col">
             <label
               for="email"
-              class="font-bold text-white text-left w-full block"
+              class="font-bold dark:text-white text-left w-full block"
             >
               Email Address
             </label>
@@ -70,7 +70,7 @@
             <div class="flex items-center flex-col w-full">
               <label
                 for="username"
-                class="font-bold text-white text-left w-full block"
+                class="font-bold dark:text-white text-left w-full block"
               >
                 Username
               </label>
@@ -87,7 +87,7 @@
           <div class="space-y-2 relative flex flex-col">
             <label
               for="password"
-              class="font-bold text-white text-left w-full block"
+              class="font-bold dark:text-white text-left w-full block"
             >
               Password
             </label>
@@ -105,7 +105,7 @@
           <div class="space-y-2 relative flex flex-col">
             <label
               for="confirm-password"
-              class="font-bold text-white text-left w-full block"
+              class="font-bold dark:text-white text-left w-full block"
             >
               Confirm Password
             </label>
