--- a/stock-market-simulator-ui/src/sign-up/index.html
+++ b/stock-market-simulator-ui/src/sign-up/index.html
@@ -91,14 +91,22 @@
             >
               Password
             </label>
-            <input
-              id="password"
-              class="p-4 rounded-xl bg-white w-full h-12"
-              placeholder="Password"
-              type="password"
-              minlength="6"
-              required
-            />
+            <div class="relative w-full">
+              <input
+                id="password"
+                class="p-4 rounded-xl bg-white w-full h-12 pr-12"
+                placeholder="Password"
+                type="password"
+                minlength="6"
+                required
+              />
+              <span
+                id="togglePassword"
+                class="absolute inset-y-0 right-1 top-[20%] flex items-center cursor-pointer text-gray-500 rounded-full size-8"
+              >
+                👁
+              </span>
+            </div>
             <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
@@ -109,14 +117,22 @@
             >
               Confirm Password
             </label>
-            <input
-              id="confirm-password"
-              class="p-4 rounded-xl bg-white w-full h-12"
-              placeholder="Confirm Password"
-              type="password"
-              minlength="6"
-              required
-            />
+            <div class="relative w-full">
+              <input
+                id="confirm-password"
+                class="p-4 rounded-xl bg-white w-full h-12 pr-12"
+                placeholder="Confirm Password"
+                type="password"
+                minlength="6"
+                required
+              />
+              <span
+                id="toggleConfirmPassword"
+                class="absolute inset-y-0 right-4 flex items-center cursor-pointer text-gray-500"
+              >
+                👁
+              </span>
+            </div>
             <p class="text-rose-500 text-left hidden">Error</p>
           </div>
 
