added loading states in login/register pages & reinforced architectural tests

--- a/stock-market-simulator-ui/src/sign-in/index.html
+++ b/stock-market-simulator-ui/src/sign-in/index.html
@@ -105,7 +105,7 @@
           <button
             id="submit"
             type="submit"
-            class="p-3 bg-blue-500 hover:bg-blue-600 transition text-white rounded-full w-full h-12"
+            class="p-3 bg-blue-500 hover:bg-blue-600 transition text-white rounded-full w-full h-12 disabled:bg-blue-400 disabled:cursor-not-allowed"
           >
             Login
           </button>
